[gd_scene load_steps=3 format=3 uid="uid://brg55g87p6yxh"]

[ext_resource type="Script" uid="uid://ctq8qmf8qgrru" path="res://scenes/game_flow/pre_race.gd" id="1_hgxkv"]

[sub_resource type="LabelSettings" id="LabelSettings_hgxkv"]
font_size = 24

[node name="PreRace" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hgxkv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_hgxkv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartRaceButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
